# p4-metric

./: LICENSE  README.md  pyproject.toml
src/p4metric/: __init__.py  core.py
