[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "p4-metric"
version         = "0.0.1"
description     = "Harmonic averaging in Classifier Quality Assessment"
readme          = "README.md"
authors      = [{ name = "Oleg Seredin, Andrei Kopylov" }]
maintainers  = [
    { name = "Egor Surkov", email = "egorsurkov.ds@gmail.com" }
]

license         = {text = "MIT"}
requires-python = ">=3.9"
dependencies    = ["numpy", "scipy>=1.11"]

[project.urls]
Homepage = "https://github.com/xxraytz/p4-metric"
Issues   = "https://github.com/xxraytz/p4-metric/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["p4metric"]
